--- a/public/locale/en/transilition.json
+++ b/public/locale/en/transilition.json
@@ -7,7 +7,7 @@
     "Adults need 2000 calories per day": "Adults need 2000 calories per day",
     "Contact Us": "Contact Us",
     "en": "ar",
-    "Main Dishes": "Main Dishes",
+    "main_dishes": "Main Dishes",
     "Sandwiches": "Sandwiches", 
     "Side Dishes": "Side Dishes",
     "Extras and Additions": "Extras and Additions",
