--- a/public/locale/ar/transilition.json
+++ b/public/locale/ar/transilition.json
@@ -4,7 +4,7 @@
     "Prices include VAT": "الاسعار شاملة ضريبة القيمة المضافة",
     "Contact Us": "تواصل معنا",
     "ar": "en",
-    "Main Dishes": "الأطباق الرئيسية",
+    "main_dishes": "الأطباق الرئيسية",
     "Sandwiches": "السندويتشات",
     "Side Dishes": "الأطباق الجانبية",
     "Extras and Additions": "الإضافات والمكملات",
