--- a/public/locale/ar/transilition.json
+++ b/public/locale/ar/transilition.json
@@ -5,13 +5,12 @@
     "Contact Us": "تواصل معنا",
     "ar": "en",
     "main_dishes": "الأطباق الرئيسية",
-    "Sandwiches": "السندويتشات",
-    "Side Dishes": "الأطباق الجانبية",
-    "Extras and Additions": "الإضافات والمكملات",
-    "Desserts": "الحلويات",
-    "Beverages": "المشروبات",
+    "sandwiches": "السندويتشات",
+    "side_dishes": "الأطباق الجانبية",
+    "extras_and_additions": "الإضافات والمكملات",
+    "desserts": "الحلويات",
+    "beverages": "المشروبات",
     "View Menu": "عرض القائمة",
-    "Add to Cart": "إضافة للسلة",
     "Price": "السعر",
     "EGP": "جنيه",
     "Size": "الحجم",
