--- a/public/locale/en/transilition.json
+++ b/public/locale/en/transilition.json
@@ -8,13 +8,12 @@
     "Contact Us": "Contact Us",
     "en": "ar",
     "main_dishes": "Main Dishes",
-    "Sandwiches": "Sandwiches", 
-    "Side Dishes": "Side Dishes",
-    "Extras and Additions": "Extras and Additions",
-    "Desserts": "Desserts",
-    "Beverages": "Beverages",
+    "sandwiches": "Sandwiches", 
+    "side_dishes": "Side Dishes",
+    "extras_and_additions": "Extras and Additions",
+    "desserts": "Desserts",
+    "beverages": "Beverages",
     "View Menu": "View Menu",
-    "Add to Cart": "Add to Cart",
     "Price": "Price",
     "EGP": "EGP",
     "Size": "Size",
